@@ -182,104 +182,6 @@ function sb_tag_query() {
 }
 
 /**
- * Function for producing a sitemap.
- *
- * @since StartBox 2.4.9
- *
- * @uses apply_filters() to pass new 'sb_sitemap_defaults' 
- * @uses wp_list_pages()
- * @uses wp_list_categories()
- *
- * @param array $args array of all configurable options
- *
- */
-function sb_sitemap( $args = '' ) {
-	global $wp_query, $post;
-	$cached_query = $wp_query;
-	$cached_post = $post;
-	$output = '';
-	
-	$defaults = array(
-		'show_pages'		=> true,
-		'show_categories'	=> true,
-		'show_posts'		=> true,
-		'show_cpts'			=> true,
-		'exclude_pages'		=> '',
-		'exclude_categories' => '',
-		'exclude_post_types' => apply_filters( 'sb_sitemap_exclude_post_types', array('attachment', 'revision', 'nav_menu_item', 'slideshow', 'page', 'post') ),
-		'class'				=> 'sitemap',
-		'container_class'	=> 'sitemap-container',
-		'header_container'	=> 'h3',
-		'subheader_container' => 'h4',
-		'echo'				=> true
-	);
-	$r = wp_parse_args( $args, apply_filters( 'sb_sitemap_defaults', $defaults ) );
-	extract( $r, EXTR_SKIP );
-	
-	if ( $show_pages ) {
-		$output .= '<div class="' . $container_class . ' ' . $container_class . '-page">' . "\n";
-		$output .= "\t" . '<' . $header_container . '>' . __( 'Pages', 'startbox' ) . '</' . $header_container . '>' . "\n";
-		$output .= "\t" . '<ul id="pagelist" class="' . $class . '">' . "\n";
-		$output .= "\t\t" . wp_list_pages('title_li=&exclude=' . $exclude_pages . '&depth=0&echo=0') . "\n";
-		$output .= "\t" . '</ul>' . "\n";
-		$output .= '</div><!-- ' . $container_class . ' ' . $container_class . '-page -->' . "\n";
-	} if ($show_cpts) {
-		$post_types = get_post_types( array('public'=>true),'objects'); 
-		foreach ( $post_types as $cpt ) {
-			if ( !in_array( $cpt->name, $exclude_post_types ) ) {
-        		$posts = new WP_query( array(
-					'posts_per_page' => 500,
-					'post_type'	=> $cpt->name
-					) );
-				if ( $posts->have_posts() ) {
-					$output .= '<div class="' . $container_class . ' ' . $container_class . '-cpt ' . $container_class . '-' . $cpt->name . '">' . "\n";
-					$output .= "\t" . '<' . $header_container . '>' . $cpt->label . '</' . $header_container . '>' . "\n";
-					$output .= "\t" . '<ul id="cptlist" class="' . $class . '">' . "\n";
-					while ( $posts->have_posts()) : $posts->the_post();
-						$output .= "\t\t" . '<li><a href="' . get_permalink() . '">' . get_the_title() . '</a> (' . get_comments_number() . ')</li>' . "\n";
-					endwhile;
-					$output .= "\t" . '</ul>' . "\n";
-					$output .= '</div><!-- ' . $container_class . ' ' . $container_class . '-cpt ' . $container_class . '-' . $cpt->name . ' -->' . "\n";
-				}
-			}
-		}
-	} if ( $show_categories ) {
-		$output .= '<div class="' . $container_class . ' ' . $container_class . '-category">' . "\n";
-		$output .= "\t" . '<' . $header_container . '>' . __( 'Categories', 'startbox' ) . '</' . $header_container . '>' . "\n";
-		$output .= "\t" . '<ul id="catlist" class="' . $class . '">' . "\n";
-		$output .= "\t\t" . wp_list_categories('title_li=&exclude=' . $exclude_categories . '&depth=0&echo=0') . "\n";
-		$output .= "\t" . '</ul>' . "\n";
-		$output .= '</div><!-- ' . $container_class . ' ' . $container_class . '-category -->' . "\n";
-	} if ( $show_posts ) {
-		
-        $categories = get_categories( 'exclude=' . $exclude_categories );
-		
-		$output .= '<div class="' . $container_class . ' ' . $container_class . '-post">' . "\n";
-		$output .= "\t" . '<' . $header_container . '>' . __( 'Posts by Category', 'startbox' ) . '</' . $header_container . '>' . "\n";
-		foreach ( $categories as $cat ) {
-        	query_posts( 'cat=' . $cat->cat_ID );
-			if ( have_posts() ) {
-	            $output .= "\t" . '<' . $subheader_container . '>' . $cat->cat_name . '</' . $subheader_container . '>' . "\n";
-	            $output .= "\t" . '<ul id="postlist" class="' . $class . '">' . "\n";
-				while (have_posts()) : the_post();
-					$output .= "\t\t" . '<li><a href="' . get_permalink() . '">' . get_the_title() . '</a> (' . get_comments_number() . ')</li>' . "\n";
-				endwhile;
-				$output .= "\t" . '</ul>' . "\n";
-			}
-		}
-		$output .= '</div><!-- ' . $container_class . ' ' . $container_class . '-post -->' . "\n";
-	}
-	
-	$wp_query = $cached_query;
-	$post = $cached_post;
-	
-	if ( $echo )
-		echo $output;
-	else
-		return $output;
-}
-
-/**
  * Function for retrieving taxonomy meta information
  *
  * @since StartBox 2.5
