@@ -3,20 +3,13 @@ Contents
 ////////////////////////////////////////////////////////////////////////////////////
 
 1. TODO
-2. Future Releases
 
 ////////////////////////////////////////////////////////////////////////////////////
 1. TODO
 ////////////////////////////////////////////////////////////////////////////////////
 
-	improve sb_sitemap() function
-		- create [sitemap] shortcode
-		- update 404, page-archive and page-sitemap to use sb_sitemap() shortcode
+##### 2.6
 	review Options API
-		
-////////////////////////////////////////////////////////////////////////////////////
-2. Future Releases
-////////////////////////////////////////////////////////////////////////////////////
 
 ##### 2.7
 	add import/export for theme settings
